tests/ui/derives/derives-span-Ord-enum.stderr
error[E0277]: the trait bound `Error: Ord` is not satisfied
  --> $DIR/derives-span-Ord-enum.rs:9:6
   |
LL | #[derive(Ord,Eq,PartialOrd,PartialEq)]
   |          --- in this derive macro expansion
...
LL |      Error
   |      ^^^^^ the trait `Ord` is not implemented for `Error`
   |
help: consider annotating `Error` with `#[derive(Ord)]`
   |
LL + #[derive(Ord)]
LL | struct Error;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
